main.css
/* ... */
@media (max-width: 768px) {
  .works .works-slider .swiper-button-next,
  .works .works-slider .swiper-button-prev {
    display: none;
  }
}
@media (max-width: 640px) {
  .works {
    padding: 8rem 0;
  }
  .works .works-header .works-title {
    transform: scale(1);
  }
  .works .works-slider {
    width: 100%;
    display: block;
  }
}
.cover-btn {
  display: inline-block;
  text-decoration: none;
  background: linear-gradient(to bottom, #3a9bdc, #0072bc);
  color: #fff;
  font-size: 1.2rem;
  font-weight: 500;
  letter-spacing: 0.1rem;
  padding: 1rem 2rem;
  border-radius: 20px;
  cursor: pointer;
  transition: all 0.35s ease;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
}
.cover-btn:hover {
  animation: pulse 1s;
  box-shadow: 0 0 0 2em transparent;
}
@keyframes pulse {
  0% {
    box-shadow: 0 0 #3a9bdc;
  }
}
.go-top-btn {
  position: fixed;
  bottom: 30px;
  right: 30px;
  padding: 10px 15px;
  background-color: rgba(0, 0, 0, 0.6);
  color: #fff;
  border: none;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 24px;
  cursor: pointer;
  transition: 0.35s ease-in-out;
  opacity: 0;
  transform: scale(0);
  z-index: 1000;
}
.go-top-btn:hover {
  background-color: rgba(0, 0, 0, 0.8);
}
.go-top-btn:focus {
  transform: scale(1.2);
}
.go-top-btn.show {
  opacity: 1;
  transform: scale(1);
}

/* preloader */
.preloader {
  /* position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background-color: white; */
  transition: opacity 0.5s ease, visibility 0.5s ease;
}
.preloader.hidden {
  opacity: 0;
  visibility: hidden;
}
.load {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  /*change these sizes to fit into your project*/
  width: 100px;
  height: 100px;
  z-index: 9999;
}
.load hr {
  border: 0;
  margin: 0;
  width: 40%;
  height: 40%;
  position: absolute;
  border-radius: 50%;
  animation: spin 2s ease infinite;
}

.load :first-child {
  background: #00a396;
  animation-delay: -1.5s;
}
.load :nth-child(2) {
  background: #aa212b;
  animation-delay: -1s;
}
.load :nth-child(3) {
  background: #ffc100;
  animation-delay: -0.5s;
}
.load :last-child {
  background: #3864A0;
}

@keyframes spin {
  0%,
  100% {
    transform: translate(0);
  }
  25% {
    transform: translate(160%);
  }
  50% {
    transform: translate(160%, 160%);
  }
  75% {
    transform: translate(0, 160%);
  }
}

